samples/_failures_safe/1761093585_5b6d8d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0b42537.c: In function ‘main’:
./samples/SAFE/__tmp_b0b42537.c:128:12: error: expected declaration or statement at end of input
  128 |     struct SimulationState sim = {0};
      |            ^~~~~~~~~~~~~~~
